--- a/client/src/components/utilities/Button/Button.css
+++ b/client/src/components/utilities/Button/Button.css
@@ -8,7 +8,7 @@
   padding-block: 0.6rem;
   font-size: 1.6rem;
   line-height: 1.5;
-  border-radius: 0.6em;
+  border-radius: 0.6rem;
   cursor: pointer;
   min-width: 6rem;
   transition: color 1.15s ease-in-out, background-color 0.5s ease-in-out;
