--- a/client/src/reset.css
+++ b/client/src/reset.css
@@ -70,7 +70,7 @@ body {
 .container {
   /* display: flex; */
   text-align: center;
-  width: 100%;
+  width: 100vw;
   padding-inline: calc(1.6rem * 0.5);
   margin-right: auto;
   margin-left: auto;
