--- a/client/src/variables.css
+++ b/client/src/variables.css
@@ -13,6 +13,10 @@
   --textFont: 'Ubuntu', sans-serif;
   --smallFont: 'Roboto Slab', serif;
 }
+.App {
+  width: 100vw;
+  height: 100vh;
+}
 /* font-family: 'Merriweather', serif;
 font-family: 'Roboto Slab', serif;
 font-family: 'Ubuntu', sans-serif; */
