--- a/client/src/components/home/Home.module.css
+++ b/client/src/components/home/Home.module.css
@@ -4,7 +4,13 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  justify-content: center;
-  justify-content: center;
+  padding-block-start: 10rem;
+  padding-inline: 5rem;
   box-sizing: border-box;
+}
+.cardsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
