--- a/client/src/components/utilities/loader/Loader.module.css
+++ b/client/src/components/utilities/loader/Loader.module.css
@@ -1,16 +1,19 @@
 .container {
   text-align: center;
-  background-color: var(--info);
+  background-color: rgba(0, 0, 0, 0.095);
   overflow: hidden;
-  width: 100vw;
+  /* width: 100vw; */
   height: 100vh;
+  z-index: 3;
 }
 .box {
   display: inline-block;
   height: 100vh;
   width: 33.3%;
   position: relative;
+  top: 0;
   transition: all 0.2s ease;
+  z-index: 3;
 }
 .message {
   position: relative;
