--- a/client/src/components/home/Home.module.css
+++ b/client/src/components/home/Home.module.css
@@ -2,9 +2,10 @@
   width: 100vw;
   height: 100vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
   flex-wrap: wrap;
-  padding-block-start: 10rem;
+  padding-block-start: 12rem;
   padding-inline: 5rem;
   box-sizing: border-box;
 }
