--- a/client/src/components/utilities/Button/Button.css
+++ b/client/src/components/utilities/Button/Button.css
@@ -1,5 +1,7 @@
 .btn {
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-weight: 400;
   color: var(--light);
   text-align: center;
