filter by gerne controller

--- a/client/src/components/landingPage/LandingPage.module.css
+++ b/client/src/components/landingPage/LandingPage.module.css
@@ -7,6 +7,8 @@
   justify-content: center;
   align-items: center;
   background-color: #252323;
+  margin-top: -8rem;
+  /* overflow: hidden; */
 }
 .title {
   font-size: 5vw;
