--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,10 @@
+.mainContainer {
+  padding-top: 5.5rem;
+  z-index: 1;
+}
 .nav {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   position: fixed;
   top: 0;
