--- a/client/src/components/addVideogame/AddVideogame.module.css
+++ b/client/src/components/addVideogame/AddVideogame.module.css
@@ -1,6 +1,8 @@
 .mainContainer {
   height: 100vh;
-  background-color: transparent;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
 }
 .input {
   width: 100%;
@@ -15,4 +17,9 @@
 }
 .label {
   font-size: 1.6rem;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
