--- a/client/src/components/addVideogame/AddVideogame.module.css
+++ b/client/src/components/addVideogame/AddVideogame.module.css
@@ -1,25 +1,105 @@
 .mainContainer {
   height: 100vh;
-  background-color: white;
+  background-color: transparent;
   display: flex;
   flex-direction: column;
+
+  justify-content: center;
+  align-items: center;
 }
-.input {
-  width: 100%;
-  padding: 1.2rem 2rem;
-  margin: 0.8rem 0;
-  display: block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  z-index: 1;
-  font-size: 1.6;
+h1 {
+  font-size: 300%;
+  font-weight: bolder;
+  font-family: var(--mainFont);
+  color: var(--light);
 }
-.label {
-  font-size: 1.6rem;
+form {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  min-width: 30rem;
+  width: 30%;
 }
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+input,
+textarea,
+.input {
+  width: 100% !important;
+  padding: 1.2rem 2rem;
+  margin: 0.8rem 0;
+  display: inline;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  z-index: 1;
+  font-size: 1.6rem;
+}
+.ratingContainer {
+  margin-block: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(252, 252, 252, 0.335);
+  width: 100%;
+  align-items: center;
+  justify-items: center;
+  border-radius: 15px;
+}
+input,
+.inputRating {
+  width: 5rem;
+  text-align: center;
+}
+label {
+  color: var(--light);
+  font-size: 1.6rem;
+  font-size: 2rem;
+  font-family: var(--mainFont);
+}
+.platformLabel {
+  color: black;
+}
+.genresDisplayContainer {
+  font-size: 1.5rem;
+  font-family: var(--textFont);
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  /* border: 1px solid green; */
+  background-color: white;
+  justify-content: space-around;
+  margin-block: 1rem;
+  border-radius: 10px;
+}
+.genreListItem {
+  margin-inline: 1rem;
+}
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 400;
+  color: var(--info);
+  text-align: center;
+  border: 1px solid transparent;
+  padding-inline: 1.2rem;
+  padding-block: 0.6rem;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  min-width: 6rem;
+  transition: color 0.5s ease-in-out, background-color 0.5s ease-in-out;
+  background-color: var(--light);
+  border: 0, 5rem solid var(--light);
+}
+
+.btn:hover {
+  color: white;
+  background-color: #c33456;
 }
