--- a/client/src/variables.css
+++ b/client/src/variables.css
@@ -2,6 +2,7 @@
   /* Colours */
   --primary: #ec4b71;
   --info: #221a36;
+  --infoTransparent: #221a36a1;
   --success: #7c915a;
   --warning: #f98122;
   --danger: #f44336;
