--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -6,4 +6,7 @@
   background-attachment: fixed;
   box-sizing: border-box;
   overflow: scroll;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
